Going HTML safe

--- a/app/views/admin/index.csv.erb
+++ b/app/views/admin/index.csv.erb
@@ -1,4 +1,4 @@
 <%= CSV.generate_line @header_array %>
 <% @data.each do |row| %>
-<%= CSV.generate_line(row) -%>
+<%= CSV.generate_line(row).html_safe -%>
 <% end %>
