--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,7 +61,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Profile', current_user %></li>
             <li><%= link_to 'Account', edit_user_registration_path %></li>
-            <% if current_user.Admin? %>
+            <% if current_user.admin? %>
               <li><%= link_to 'Admin', '/admin' %></li>
               <li><%= link_to 'Users', users_path %></li>
             <% end %>
