--- a/app/views/schools/_searchbyradius.html.erb
+++ b/app/views/schools/_searchbyradius.html.erb
@@ -1,4 +1,10 @@
 <%= form_tag '/near_me', method: :get, class: "form-inline" do %>
+   <div class="form-group">
+  <%= label_tag 'School Name:' %>
+  <%= text_field_tag :search, params[:search], class: "form-control" %>
+
+  </div>
+  
   <div class="form-group">
   <%= label_tag 'Zip Code:' %>
   <%= number_field_tag :zip, params[:zip], class: "form-control" %>
@@ -8,6 +14,6 @@
   <%= number_field_tag 'radius', params[:radius], class: "form-control" %>
   </div>
   <div class="form-group">
-  <%= submit_tag 'Near Me', class: "btn btn-default btn-primary" %>
+  <%= submit_tag 'Search', class: "btn btn-default btn-primary" %>
   </div>
 <% end -%>
