bug id 54 email notification fixed and email body changed for send update file

--- a/app/views/user_mailer/send_update.html.erb
+++ b/app/views/user_mailer/send_update.html.erb
@@ -1,6 +1,7 @@
-<h1>The Event: "<%= @event.title %>" has been updated.<h1>
+<h1>The Event: "<%= @event.title %>" has been updated.</h1>
 
-<p>The host <%= @sender.name %> has update their event.  </p>
+<p>The host <%= @sender.name %> has updated their event.</p> 
+<p>Please login to the School business app to view the change.</p>
 
 <p>Thanks,</p>
 <p>The School Business Team</p>
