--- a/app/views/user_mailer/event_cancel.html.erb
+++ b/app/views/user_mailer/event_cancel.html.erb
@@ -1,4 +1,4 @@
-<h1>The Event: "<%= @event.title %>" has been canceled.<h1>
+<h1>The Event: "<%= @event.title %>" has been canceled.</h1>
 
 <p>The host <%= @sender.name %> has chosen to cancel the event.  </p>
 
